--- a/styles.scss
+++ b/styles.scss
@@ -4,10 +4,10 @@
 // https://quarto.org/docs/output-formats/html-themes.html#sass-variables
 
 /* Colors */
-$body-bg: #4485AD;     /* $body-bg: #002626; cor de fundo da página */
+$body-bg: #517699;     /* $body-bg: #002626; cor de fundo da página */
 $body-color: #ffffff;  /* cor do texto */
 $link-color: #09164c;  /* cor dos links */
-$sidebar-bg: #4485AD;   /* $navbar-bg: #003333; cor de fundo da barra de navegação */
+$sidebar-bg: #517699;   /* $navbar-bg: #003333; cor de fundo da barra de navegação */
 $sidebar-fg: #ffffff;   /* cor do texto na barra de navegação */
 
 /* styles.css */
