realizados ajustes finos

--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,7 @@
 /* Colors */
 $body-bg: #517699;     /* $body-bg: #002626; cor de fundo da página */
 $body-color: #ffffff;  /* cor do texto */
-$link-color: #09164c;  /* cor dos links */
+$link-color: #D5DEE7;  /* cor dos links */
 $sidebar-bg: #517699;   /* $navbar-bg: #003333; cor de fundo da barra de navegação */
 $sidebar-fg: #ffffff;   /* cor do texto na barra de navegação */
 
